add-bookings 2.0